--- a/BannerSampleCode/Base.lproj/Main.storyboard
+++ b/BannerSampleCode/Base.lproj/Main.storyboard
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NWB-XJ-9Z7">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NWB-XJ-9Z7">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,22 +11,22 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BannerSampleCode" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8Tz-3i-bKO">
-                                <rect key="frame" x="163" y="318" width="51" height="31"/>
+                                <rect key="frame" x="275.5" y="284.5" width="51" height="31"/>
                                 <connections>
-                                    <action selector="clickSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="oPC-Ef-S8m"/>
+                                    <action selector="tapSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="oPC-Ef-S8m"/>
                                 </connections>
                             </switch>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="8Tz-3i-bKO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k8e-97-X2C"/>
                             <constraint firstItem="8Tz-3i-bKO" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="t7z-KK-Nc2"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZdL-Cy-BiB"/>
                 </viewController>
